--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "codeitnowin/barcode",
-    "description": "Barcode & Qr Code generator library by http://www.codeitnow.in. You can use it with Custom PHP application or any PHP Framework such as Laravel, Cakephp, Yii, Codeigneter etc.",
+    "name": "nagdevbharat/barcode",
+    "description": "Barcode & Qr Code generator library. You can use it with Custom PHP application or any PHP Framework such as Laravel, Cakephp, Yii, Codeigneter etc.",
     "keywords": ["barcode", "generator", "symfony", "symfony2", "Laravel", "Cakephp", "QrCode", "Qr", "Code"],
-    "homepage": "http://www.codeitnow.in",
+    "homepage": "http://www.biztechcs.com",
     "license": "MIT",
     "authors": [
-        {"name": "Akhtar Khan", "email": "er.akhtarkhan@gmail.com"}
+        {"name": "Bharat Nagdev", "email": "bharat.n@int.biztechcs.com"}
     ],
     "minimum-stability": "stable",
     "version" : "3.0.3",
